add instructions in the readme; add initial style guide page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,6 @@ site_name: Erdiko Docs
 pages:
     - Home: index.md
     - About: about.md
+    - Style Guide: style-guide.md
 
 theme: material
-# theme: flatly
