add legacy erdiko docs and start to refactor; move help docs to subfolder

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,11 @@ site_author: Arroyo Labs
 
 pages:
     - Home: index.md
-    - Quick start: quickstart.md
-    - Sample app: sample-app.md
+    - Quick Start: framework/quickstart.md
+    - Framework:
+        - 'Overview': framework/index.md
+        - 'Documentation': framework/documentation.md
+        - 'Example App': framework/example.md
     - User Admin:
         - 'Overview': user-admin/index.md
         - 'Extending': user-admin/extending.md
@@ -25,10 +28,10 @@ pages:
         - 'Overview': authenticate/index.md
         - 'Extending': authenticate/extending.md
     - Help (Learn More):
-        - Submitting Issues: help.md
-        - Coding style guide: style-guide.md
-        - About Us: about.md
-        - Contributing: contributing.md
+        - Submitting Issues: help/index.md
+        - Coding style guide: help/style-guide.md
+        - About Us: help/about.md
+        - Contributing: help/contributing.md
 
 theme: material
 
