add drip tracker

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,3 +60,18 @@ extra:
     - type: instagram
       link: https://www.instagram.com/arroyolabs
   logo: images/logo.png
+
+copyright: |
+  <script type="text/javascript">
+  var _dcq = _dcq || [];
+  var _dcs = _dcs || {};
+  _dcs.account = '9007530';
+
+  (function() {
+    var dc = document.createElement('script');
+    dc.type = 'text/javascript'; dc.async = true;
+    dc.src = '//tag.getdrip.com/9007530.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(dc, s);
+  })();
+  </script>
